# ostis-example-app

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  ostis-example-app.ini  repo.path
cmake/: common.cmake
interface/sc-web-extensions/: .gitignore  Gruntfile.js  package-lock.json  package.json
interface/sc-web-extensions/example/kb/: format_example.scs  ui_components.scs
interface/sc-web-extensions/example/src/: example-component.js
interface/sc-web-extensions/scripts/: update_css_and_js.sh
kb/: button.scs  section_subjdomain_ligaments_relations.scs
kb/components/: concept_component_of_user_interface.scs  subject_domain_of_user_interface.scs  subject_domain_of_user_interface_components.scs
kb/components/data entry/: concept_data_entry.scs
kb/components/data entry/concept data components/: concept_input.scs  concept_input_all.scs  nrel_input.scs
kb/components/general/: concept_general.scs
kb/components/general/general_components/: concept_button.scs  concept_icon.scs  concept_typography.scs
kb/components/layout/: concept_layouts.scs
kb/components/layout/layouts_components/: concept_divider.scs  concept_grid.scs  concept_layout.scs  concept_space.scs
kb/non_subject_domain_concepts/: nrel_search_result.scs
kb/ostis-chemistry-master/: .gitignore  LICENSE  README.md
kb/ostis-chemistry-master/kb/: README.md  concepts.scs  identificators.scs  identifiers_for_calculating_agents.scs  nrels.scs  photosynthesis.scs  react.gwf  rrels.scs  years.scs
kb/ostis-chemistry-master/kb/additional/: minerals.scs  other.scs
kb/ostis-chemistry-master/kb/chemical weapon/: chemical_weapon.scs
kb/ostis-chemistry-master/kb/concepts/: 3_half_life.scs  acetylide.scs  adsorption.scs  alkali.scs  allotropic_modification.scs  allotropy.scs  amide.scs  amin_acid.scs  ammonia.scs  amorphousness.scs  anion.scs  anisotropy.scs  anode.scs  antiseptic.scs  atom.scs  atomic_mass_unit.scs  atomic_nucleus.scs  avogadro_number.scs  basis.scs  binder.scs  brownian_motion.scs  carbon_dioxide.scs  cathode.scs  cation.scs  cement.scs  chain.scs  chemical_compound.scs  chemical_element.scs  chemical_formula.scs  chemical_reagents.scs  chemistry.scs  coagulant.scs  color_bronze.scs  color_crimson.scs  color_golden.scs  color_pink.scs  color_purple.scs  concept_aerosol.scs  concept_benzene.scs  concept_boiling.scs  (+201 more)
kb/ostis-chemistry-master/kb/elements/: Al.scs  Be.scs  Bk.scs  Er.scs  Fm.scs  Fr.scs  Li.scs  Yb.scs  elem_He.scs  elem_Lu.scs  elem_Ne.scs  elem_Nh.scs  elem_Pb.scs  elem_Zn.scs  se.scs  sg.scs  si.scs  sr.scs  tb.scs  tm.scs  v.scs  w.scs
kb/ostis-chemistry-master/kb/menu/: ui_main_menu.scs  ui_menu_run_scp_program.scs
kb/ostis-chemistry-master/kb/reactions/: AgNO3_interaction_KOH.gwf  AgNO3_interaction_KOH.scs  CuOH2_interaction_AgNO3.gwf  CuOH2_interaction_AgNO3.scs  CuOH2_interaction_Na2SO4.gwf  CuOH2_interaction_Na2SO4.scs  CuOH2_neutralization_H2SO4.gwf  CuOH2_neutralization_H2SO4.scs  CuOH2_neutralization_H3PO4.gwf  CuOH2_neutralization_H3PO4.scs  CuOH2_neutralization_HBr.gwf  CuOH2_neutralization_HBr.scs  CuOH2_neutralization_HCl.gwf  CuOH2_neutralization_HCl.scs  CuOH2_neutralization_HNO3.gwf  CuOH2_neutralization_HNO3.scs  сopper_hydroxide_II_calcination.gwf  сopper_hydroxide_II_calcination.scs
kb/ostis-chemistry-master/kb/section_subject domain of solutions/: section_subject_domain_of_solutions.scsi
kb/ostis-chemistry-master/kb/sections/: section_subject_domain_of_chemistry.scs  subject_domain_of_chemistry.scs
kb/ostis-chemistry-master/kb/substances/: subst_Bk.scs  subst_Ca.scs  subst_Cd.scs  subst_Ce.scs  subst_Cf.scs  subst_Cm.scs  subst_Cn.scs  subst_Co.scs  subst_Cr.scs  subst_Cu.scs  subst_Db.scs  subst_Ds.scs  subst_Dy.scs  subst_Er.scs  subst_Es.scs  subst_Eu.scs  subst_Fe.scs  subst_Fl.scs  subst_Gd.scs  subst_Hf.scs  subst_Ho.scs  subst_In.scs  subst_La.scs  (+34 more)
kb/ui_menu/: ui_menu_na_example_commands.scs  ui_start_sc_element.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/exampleModule/: CMakeLists.txt  README.md  exampleModule.cpp  exampleModule.hpp
problem-solver/cxx/exampleModule/agents/: AHelloWorld.cpp  AHelloWorld.hpp  IsomorphicSearchAgent.cpp  IsomorphicSearchAgent.hpp  SubdividingSearchAgent.cpp  SubdividingSearchAgent.hpp
problem-solver/cxx/exampleModule/keynodes/: keynodes.cpp  keynodes.hpp
problem-solver/cxx/exampleModule/specifications/agent_of_isomorphic_search/: lib_component_ui_menu_isomorphic_search.scs  ui_menu_isomorphic_search.scs  ui_menu_isomorphic_search.scsi
problem-solver/cxx/exampleModule/specifications/agent_of_subdividing_search/: ui_menu_subdividing_search.scs
problem-solver/cxx/reusable-components/: CMakeLists.txt
problem-solver/py/: CMakeLists.txt  README.md
problem-solver/py/HelloModule/: hwModule.cpp
problem-solver/py/HelloService/: hwModule.cpp
scripts/: build_kb.sh  build_problem_solver.sh  build_sc_web.sh  clone_subsystems.sh  install.sh  install_ostis.sh  install_submodules.sh  install_subsystems.sh  run_sc_server.sh  run_sc_web.sh  sc_machine_cmake_file_ext.txt  set_vars.sh
(+1143 files in other folders)
